Implemented logout, cleaned up lil bit of code, no more refresh token hashing storing as it is in db

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ set(SOURCES
     ${SRC_DIR}/handlers/get_home_handler.cpp
     ${SRC_DIR}/handlers/post_home_handler.cpp
     ${SRC_DIR}/middleware/auth.cpp
+    ${SRC_DIR}/handlers/post_logout_handler.cpp
 )
 
 # Add the executable
