--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10) # Minimum CMake version required
 
 # Project name and version
-project(URLShortner VERSION 1.0)
+project(HttpServer VERSION 1.0)
 
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 20)  # Use C++20 for wider compiler support
@@ -46,17 +46,18 @@ set(SOURCES
     ${SRC_DIR}/middleware/auth.cpp
     ${SRC_DIR}/handlers/post_logout_handler.cpp
     ${SRC_DIR}/http/multipart_parser.cpp
+    ${SRC_DIR}/handlers/get_history_handler.cpp
 )
 
 # Add the executable
-add_executable(URLShortner ${SOURCES})
+add_executable(HttpServer ${SOURCES})
 
 # Find and link PostgreSQL
 find_package(PostgreSQL REQUIRED)
 if(PostgreSQL_FOUND)
     message(STATUS "PostgreSQL found: ${PostgreSQL_INCLUDE_DIRS}, linking...")
-    target_include_directories(URLShortner PRIVATE ${PostgreSQL_INCLUDE_DIRS})
-    target_link_libraries(URLShortner PRIVATE ${PostgreSQL_LIBRARIES})
+    target_include_directories(HttpServer PRIVATE ${PostgreSQL_INCLUDE_DIRS})
+    target_link_libraries(HttpServer PRIVATE ${PostgreSQL_LIBRARIES})
 else()
     message(FATAL_ERROR "PostgreSQL NOT found. Install libpq-dev and retry.")
 endif()
@@ -65,19 +66,19 @@ endif()
 find_package(OpenSSL REQUIRED)
 if(OpenSSL_FOUND)
     message(STATUS "OpenSSL found and linked to the project")
-    target_link_libraries(URLShortner PRIVATE OpenSSL::Crypto)
+    target_link_libraries(HttpServer PRIVATE OpenSSL::Crypto)
 else()
     message(FATAL_ERROR "OpenSSL NOT found! Install libssl-dev (Linux) or OpenSSL (Mac/Windows).")
 endif()
 
 # Set output directory
-set_target_properties(URLShortner PROPERTIES
+set_target_properties(HttpServer PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build"
 )
 
 # Compiler warnings (optional)
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-    target_compile_options(URLShortner PRIVATE -Wall -Wextra -pedantic)
+    target_compile_options(HttpServer PRIVATE -Wall -Wextra -pedantic)
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-    target_compile_options(URLShortner PRIVATE /W4)
+    target_compile_options(HttpServer PRIVATE /W4)
 endif()
